// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PostsTemplate /> should match snapshot 1`] = `
.c20 {
  padding: 0 3.2rem;
  margin: 3.2rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c21 {
  background-color: #2a3840;
  color: #f2f2f2;
  border: none;
  padding: 1.6rem 3.2rem;
  font-size: 1.6rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  cursor: pointer;
}

.c21:hover {
  color: #f24b4b;
}

.c21:disabled {
  background-color: #aaa;
}

.c6 {
  color: #2a3840;
  line-height: 1.2;
  font-size: 2.4rem;
  font-weight: 900;
  text-transform: uppercase;
  text-align: center;
}

.c12 {
  color: #2a3840;
  line-height: 1.2;
  font-size: 2.4rem;
  font-weight: 900;
  text-transform: none;
  text-align: center;
}

.c18 .c5 {
  margin: 1.6rem 0;
}

.c18 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c18:hover a {
  color: #f24b4b;
}

.c18:hover img {
  opacity: 0.8;
}

.c19 {
  max-width: 100%;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.c16 {
  width: 100%;
}

.c17 {
  max-width: 120rem;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(28rem,1fr));
  gap: 3.2rem;
  padding: 3.2rem;
}

.c25 {
  font-size: 2.4rem;
}

.c25 p {
  margin: 4.8rem 0;
}

.c25 a {
  color: #f24b4b;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c25 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c25 pre {
  background-color: #161B22;
  color: #C9D1D9;
  padding: 2.4rem;
  font-family: monospace;
  margin: 4.8rem 0;
  border-radius: 1rem;
  width: 100%;
  overflow-x: auto;
  font-size: 1.6rem;
}

.c25 img {
  max-width: 100%;
}

.c25 .image {
  background-color: #ddd;
  line-height: 0;
  margin: 4.8rem 0;
}

.c25 .image figcaption {
  font-size: 1.6rem;
  padding: 1.6rem;
  text-align: center;
  line-height: 1.3rem;
}

.c25 .image-style-side {
  float: right;
  margin: 2.4rem;
}

.c25 hr {
  border: none;
  border-bottom: 0.1rem solid #ddd;
}

.c25 ul,
.c25 ol {
  margin: 4.8rem;
}

.c25 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c25 table {
  width: 100%;
  border-collapse: collapse;
}

.c25 table td,
.c25 table th {
  padding: 1.6rem;
  border: 0.1rem solid #ddd;
}

.c23 {
  text-align: center;
  border-top: 1px solid #ddd;
}

.c23 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c23 .c24 {
  font-size: 1.6rem;
}

.c26 {
  background-color: #2a3840;
  color: #f2f2f2;
  position: fixed;
  bottom: 3rem;
  right: 5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  z-index: 6;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c26:hover {
  color: #f24b4b;
}

.c1 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c7 a {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c7 a > img {
  width: 15rem;
  border-radius: 50%;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  max-width: 96rem;
  color: #333;
  font-size: 1.6rem;
  margin: 0 auto;
}

.c10 .c5 {
  margin: 1.6rem 0;
  text-align: left;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  margin-left: 3.2rem;
  max-width: 48rem;
}

.c2 {
  background-color: #2a3840;
  padding: 3.2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  z-index: 1;
  width: 100%;
  max-width: 32rem;
  height: 100vh;
  top: 0;
  left: 0;
  overflow-y: auto;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  left: -30rem;
}

.c2::-webkit-scrollbar {
  display: none;
}

.c3 {
  margin: auto;
  width: 100%;
}

.c4 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 4rem 0;
}

.c4 .c5 img {
  border: 0.3rem solid #f24b4b;
}

.c0 {
  position: fixed;
  top: 2.4rem;
  color: #f2f2f2;
  background-color: #2a3840;
  z-index: 2;
  width: 3rem;
  height: 3rem;
  left: 26rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  left: 1rem;
  color: #f2f2f2;
}

.c8 a {
  display: block;
  color: #f2f2f2;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0 solid #2a3840;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c8 a:hover {
  border-right: 0.5rem solid #f24b4b;
  color: #f24b4b;
}

.c13 {
  margin: 0 auto;
  margin-bottom: 4rem;
  padding: 0 3.2rem;
  max-width: 120rem;
  width: 1000%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 3rem;
  right: 0.1rem;
}

.c13 > svg {
  width: 2rem;
  position: relative;
  right: 2.6rem;
}

.c14 {
  padding: 0.5rem 1.6rem;
  margin-left: auto;
  border: 1px solid #2a3840;
  outline: none;
  width: 0;
  position: relative;
  z-index: 2;
  background: transparent;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c14:focus {
  border: 1px solid #2a3840;
  outline: none;
  width: 20rem;
}

.c15 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  margin-bottom: 6.4rem;
}

.c9 {
  margin-top: 6.4rem;
  padding: 0 3.2rem;
}

.c22 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  padding: 3.2rem;
}

@media (max-width:360px) {
  .c17 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c25 {
    font-size: 2rem;
  }
}

@media (max-width:768px) {
  .c10 {
    -webkit-flex-flow: column wrap;
    -ms-flex-flow: column wrap;
    flex-flow: column wrap;
  }
}

@media (max-width:768px) {
  .c11 {
    margin: 0;
  }
}

@media (max-width:768px) {
  .c2 {
    left: -32rem;
  }
}

@media (max-width:768px) {
  .c0 {
    left: 0;
  }
}

<div>
  <div
    class=""
  >
    <a
      aria-label="Open or close menu"
      class="c0"
      href="#"
      title="Open or close menu"
    >
      <svg
        aria-hidden="true"
        aria-label="Open menu"
        class="c1"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </a>
    <div
      aria-hidden="true"
      class="c2"
    >
      <nav
        class="c3"
      >
        <div
          class="c4"
        >
          <h1
            class="c5 c6"
          >
            <div
              class="c7"
            >
              <a
                href="/"
                target="_self"
              >
                <img
                  alt="Evandro Calado"
                  src="https://res.cloudinary.com/dnhsdenji/image/upload/v1679924887/110628201_ae0753864b.jpg"
                />
              </a>
            </div>
          </h1>
        </div>
        <div
          class="c8"
        >
          <a
            href="/home"
            target="_self"
          >
            home
          </a>
        </div>
        <div
          class="c8"
        >
          <a
            href="/posts"
            target="_self"
          >
            posts
          </a>
        </div>
      </nav>
    </div>
    <div
      class="c9"
    >
      <header
        class="c10"
      >
        <h1
          class="c5 c6"
        >
          <div
            class="c7"
          >
            <a
              href="https://github.com/EvandroCalado"
              target="_blank"
            >
              <img
                alt="Evandro Calado - Blog sobre alguma coisa"
                src="https://res.cloudinary.com/dnhsdenji/image/upload/v1679924887/110628201_ae0753864b.jpg"
              />
            </a>
          </div>
        </h1>
        <div
          class="c11"
        >
          <h2
            class="c5 c12"
          >
            Evandro Calado
          </h2>
          <p>
            Blog sobre alguma coisa
          </p>
        </div>
      </header>
    </div>
    <form
      action="/search/"
      method="GET"
    >
      <div
        class="c13"
      >
        <input
          class="c14"
          name="q"
          placeholder="Busca..."
          type="search"
        />
        <svg
          aria-hidden="true"
          class="c1"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
          />
        </svg>
      </div>
    </form>
    <div
      class="c15"
    >
      <div
        class="c16"
      >
        <div
          class="c17"
        >
          <div
            class="c18"
          >
            <a
              href="/post/undefined"
            >
              <img
                alt="Desenvolvimento de aplicativos web escaláveis com Next.js"
                class="c19"
                src="https://res.cloudinary.com/dnhsdenji/image/upload/v1679929576/twitter_card_f0df8b6a20.png"
              />
            </a>
            <h2
              class="c5 c12"
            >
              <a
                href="/post/undefined"
              >
                Desenvolvimento de aplicativos web escaláveis com Next.js
              </a>
            </h2>
            <p
              class=""
            >
              Se você está procurando um framework poderoso para desenvolver aplicativos web escaláveis, o Next.js pode ser a escolha certa para você. O Next.js é um framework baseado em React que oferece recursos avançados, como renderização no lado do servidor e roteamento dinâmico, para ajudá-lo a criar aplicativos web modernos e de alto desempenho. Neste post, exploraremos as principais características do Next.js e veremos como usá-lo para construir aplicativos web escaláveis.
            </p>
          </div>
          <div
            class="c18"
          >
            <a
              href="/post/undefined"
            >
              <img
                alt="Desenvolvimento de aplicativos web escaláveis com Next.js"
                class="c19"
                src="https://res.cloudinary.com/dnhsdenji/image/upload/v1679929576/twitter_card_f0df8b6a20.png"
              />
            </a>
            <h2
              class="c5 c12"
            >
              <a
                href="/post/undefined"
              >
                Desenvolvimento de aplicativos web escaláveis com Next.js
              </a>
            </h2>
            <p
              class=""
            >
              Se você está procurando um framework poderoso para desenvolver aplicativos web escaláveis, o Next.js pode ser a escolha certa para você. O Next.js é um framework baseado em React que oferece recursos avançados, como renderização no lado do servidor e roteamento dinâmico, para ajudá-lo a criar aplicativos web modernos e de alto desempenho. Neste post, exploraremos as principais características do Next.js e veremos como usá-lo para construir aplicativos web escaláveis.
            </p>
          </div>
          <div
            class="c18"
          >
            <a
              href="/post/undefined"
            >
              <img
                alt="Desenvolvimento de aplicativos web escaláveis com Next.js"
                class="c19"
                src="https://res.cloudinary.com/dnhsdenji/image/upload/v1679929576/twitter_card_f0df8b6a20.png"
              />
            </a>
            <h2
              class="c5 c12"
            >
              <a
                href="/post/undefined"
              >
                Desenvolvimento de aplicativos web escaláveis com Next.js
              </a>
            </h2>
            <p
              class=""
            >
              Se você está procurando um framework poderoso para desenvolver aplicativos web escaláveis, o Next.js pode ser a escolha certa para você. O Next.js é um framework baseado em React que oferece recursos avançados, como renderização no lado do servidor e roteamento dinâmico, para ajudá-lo a criar aplicativos web modernos e de alto desempenho. Neste post, exploraremos as principais características do Next.js e veremos como usá-lo para construir aplicativos web escaláveis.
            </p>
          </div>
          <div
            class="c18"
          >
            <a
              href="/post/undefined"
            >
              <img
                alt="Desenvolvimento de aplicativos web escaláveis com Next.js"
                class="c19"
                src="https://res.cloudinary.com/dnhsdenji/image/upload/v1679929576/twitter_card_f0df8b6a20.png"
              />
            </a>
            <h2
              class="c5 c12"
            >
              <a
                href="/post/undefined"
              >
                Desenvolvimento de aplicativos web escaláveis com Next.js
              </a>
            </h2>
            <p
              class=""
            >
              Se você está procurando um framework poderoso para desenvolver aplicativos web escaláveis, o Next.js pode ser a escolha certa para você. O Next.js é um framework baseado em React que oferece recursos avançados, como renderização no lado do servidor e roteamento dinâmico, para ajudá-lo a criar aplicativos web modernos e de alto desempenho. Neste post, exploraremos as principais características do Next.js e veremos como usá-lo para construir aplicativos web escaláveis.
            </p>
          </div>
          <div
            class="c18"
          >
            <a
              href="/post/undefined"
            >
              <img
                alt="Desenvolvimento de aplicativos web escaláveis com Next.js"
                class="c19"
                src="https://res.cloudinary.com/dnhsdenji/image/upload/v1679929576/twitter_card_f0df8b6a20.png"
              />
            </a>
            <h2
              class="c5 c12"
            >
              <a
                href="/post/undefined"
              >
                Desenvolvimento de aplicativos web escaláveis com Next.js
              </a>
            </h2>
            <p
              class=""
            >
              Se você está procurando um framework poderoso para desenvolver aplicativos web escaláveis, o Next.js pode ser a escolha certa para você. O Next.js é um framework baseado em React que oferece recursos avançados, como renderização no lado do servidor e roteamento dinâmico, para ajudá-lo a criar aplicativos web modernos e de alto desempenho. Neste post, exploraremos as principais características do Next.js e veremos como usá-lo para construir aplicativos web escaláveis.
            </p>
          </div>
          <div
            class="c18"
          >
            <a
              href="/post/undefined"
            >
              <img
                alt="Desenvolvimento de aplicativos web escaláveis com Next.js"
                class="c19"
                src="https://res.cloudinary.com/dnhsdenji/image/upload/v1679929576/twitter_card_f0df8b6a20.png"
              />
            </a>
            <h2
              class="c5 c12"
            >
              <a
                href="/post/undefined"
              >
                Desenvolvimento de aplicativos web escaláveis com Next.js
              </a>
            </h2>
            <p
              class=""
            >
              Se você está procurando um framework poderoso para desenvolver aplicativos web escaláveis, o Next.js pode ser a escolha certa para você. O Next.js é um framework baseado em React que oferece recursos avançados, como renderização no lado do servidor e roteamento dinâmico, para ajudá-lo a criar aplicativos web modernos e de alto desempenho. Neste post, exploraremos as principais características do Next.js e veremos como usá-lo para construir aplicativos web escaláveis.
            </p>
          </div>
        </div>
      </div>
      <div
        class="c20"
      >
        <button
          class="c21"
        >
          Carregar mais
        </button>
      </div>
    </div>
    <div
      class="c22"
    >
      <footer
        class="c23"
      >
        <div
          class="c24 c25"
        >
          <p>
            Feito com 💕 por 
            <a
              href="https://github.com/EvandroCalado"
            >
              Evandro Calado
            </a>
          </p>
        </div>
      </footer>
    </div>
    <a
      aria-label="Go to top"
      class="c26"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c1"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`<PostsTemplate /> should match snapshot without posts 1`] = `
.c6 {
  color: #2a3840;
  line-height: 1.2;
  font-size: 2.4rem;
  font-weight: 900;
  text-transform: uppercase;
  text-align: center;
}

.c12 {
  color: #2a3840;
  line-height: 1.2;
  font-size: 2.4rem;
  font-weight: 900;
  text-transform: none;
  text-align: center;
}

.c16 {
  width: 100%;
}

.c17 {
  padding: 3.2rem;
  text-align: center;
  font-size: 1.6rem;
}

.c18 {
  max-width: 120rem;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(28rem,1fr));
  gap: 3.2rem;
  padding: 3.2rem;
}

.c22 {
  font-size: 2.4rem;
}

.c22 p {
  margin: 4.8rem 0;
}

.c22 a {
  color: #f24b4b;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c22 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c22 pre {
  background-color: #161B22;
  color: #C9D1D9;
  padding: 2.4rem;
  font-family: monospace;
  margin: 4.8rem 0;
  border-radius: 1rem;
  width: 100%;
  overflow-x: auto;
  font-size: 1.6rem;
}

.c22 img {
  max-width: 100%;
}

.c22 .image {
  background-color: #ddd;
  line-height: 0;
  margin: 4.8rem 0;
}

.c22 .image figcaption {
  font-size: 1.6rem;
  padding: 1.6rem;
  text-align: center;
  line-height: 1.3rem;
}

.c22 .image-style-side {
  float: right;
  margin: 2.4rem;
}

.c22 hr {
  border: none;
  border-bottom: 0.1rem solid #ddd;
}

.c22 ul,
.c22 ol {
  margin: 4.8rem;
}

.c22 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c22 table {
  width: 100%;
  border-collapse: collapse;
}

.c22 table td,
.c22 table th {
  padding: 1.6rem;
  border: 0.1rem solid #ddd;
}

.c20 {
  text-align: center;
  border-top: 1px solid #ddd;
}

.c20 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c20 .c21 {
  font-size: 1.6rem;
}

.c23 {
  background-color: #2a3840;
  color: #f2f2f2;
  position: fixed;
  bottom: 3rem;
  right: 5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  z-index: 6;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c23:hover {
  color: #f24b4b;
}

.c1 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c7 a {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c7 a > img {
  width: 15rem;
  border-radius: 50%;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  max-width: 96rem;
  color: #333;
  font-size: 1.6rem;
  margin: 0 auto;
}

.c10 .c5 {
  margin: 1.6rem 0;
  text-align: left;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  margin-left: 3.2rem;
  max-width: 48rem;
}

.c2 {
  background-color: #2a3840;
  padding: 3.2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  z-index: 1;
  width: 100%;
  max-width: 32rem;
  height: 100vh;
  top: 0;
  left: 0;
  overflow-y: auto;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  left: -30rem;
}

.c2::-webkit-scrollbar {
  display: none;
}

.c3 {
  margin: auto;
  width: 100%;
}

.c4 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 4rem 0;
}

.c4 .c5 img {
  border: 0.3rem solid #f24b4b;
}

.c0 {
  position: fixed;
  top: 2.4rem;
  color: #f2f2f2;
  background-color: #2a3840;
  z-index: 2;
  width: 3rem;
  height: 3rem;
  left: 26rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  left: 1rem;
  color: #f2f2f2;
}

.c8 a {
  display: block;
  color: #f2f2f2;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0 solid #2a3840;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c8 a:hover {
  border-right: 0.5rem solid #f24b4b;
  color: #f24b4b;
}

.c13 {
  margin: 0 auto;
  margin-bottom: 4rem;
  padding: 0 3.2rem;
  max-width: 120rem;
  width: 1000%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 3rem;
  right: 0.1rem;
}

.c13 > svg {
  width: 2rem;
  position: relative;
  right: 2.6rem;
}

.c14 {
  padding: 0.5rem 1.6rem;
  margin-left: auto;
  border: 1px solid #2a3840;
  outline: none;
  width: 0;
  position: relative;
  z-index: 2;
  background: transparent;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c14:focus {
  border: 1px solid #2a3840;
  outline: none;
  width: 20rem;
}

.c15 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  margin-bottom: 6.4rem;
}

.c9 {
  margin-top: 6.4rem;
  padding: 0 3.2rem;
}

.c19 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  padding: 3.2rem;
}

@media (max-width:360px) {
  .c18 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c22 {
    font-size: 2rem;
  }
}

@media (max-width:768px) {
  .c10 {
    -webkit-flex-flow: column wrap;
    -ms-flex-flow: column wrap;
    flex-flow: column wrap;
  }
}

@media (max-width:768px) {
  .c11 {
    margin: 0;
  }
}

@media (max-width:768px) {
  .c2 {
    left: -32rem;
  }
}

@media (max-width:768px) {
  .c0 {
    left: 0;
  }
}

<div>
  <div
    class=""
  >
    <a
      aria-label="Open or close menu"
      class="c0"
      href="#"
      title="Open or close menu"
    >
      <svg
        aria-hidden="true"
        aria-label="Open menu"
        class="c1"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </a>
    <div
      aria-hidden="true"
      class="c2"
    >
      <nav
        class="c3"
      >
        <div
          class="c4"
        >
          <h1
            class="c5 c6"
          >
            <div
              class="c7"
            >
              <a
                href="/"
                target="_self"
              >
                <img
                  alt="Evandro Calado"
                  src="https://res.cloudinary.com/dnhsdenji/image/upload/v1679924887/110628201_ae0753864b.jpg"
                />
              </a>
            </div>
          </h1>
        </div>
        <div
          class="c8"
        >
          <a
            href="/home"
            target="_self"
          >
            home
          </a>
        </div>
        <div
          class="c8"
        >
          <a
            href="/posts"
            target="_self"
          >
            posts
          </a>
        </div>
      </nav>
    </div>
    <div
      class="c9"
    >
      <header
        class="c10"
      >
        <h1
          class="c5 c6"
        >
          <div
            class="c7"
          >
            <a
              href="https://github.com/EvandroCalado"
              target="_blank"
            >
              <img
                alt="Evandro Calado - Blog sobre alguma coisa"
                src="https://res.cloudinary.com/dnhsdenji/image/upload/v1679924887/110628201_ae0753864b.jpg"
              />
            </a>
          </div>
        </h1>
        <div
          class="c11"
        >
          <h2
            class="c5 c12"
          >
            Evandro Calado
          </h2>
          <p>
            Blog sobre alguma coisa
          </p>
        </div>
      </header>
    </div>
    <form
      action="/search/"
      method="GET"
    >
      <div
        class="c13"
      >
        <input
          class="c14"
          name="q"
          placeholder="Busca..."
          type="search"
        />
        <svg
          aria-hidden="true"
          class="c1"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
          />
        </svg>
      </div>
    </form>
    <div
      class="c15"
    >
      <div
        class="c16"
      >
        <p
          class="c17"
        >
          Nenhum post encontrado !
        </p>
        <div
          class="c18"
        />
      </div>
    </div>
    <div
      class="c19"
    >
      <footer
        class="c20"
      >
        <div
          class="c21 c22"
        >
          <p>
            Feito com 💕 por 
            <a
              href="https://github.com/EvandroCalado"
            >
              Evandro Calado
            </a>
          </p>
        </div>
      </footer>
    </div>
    <a
      aria-label="Go to top"
      class="c23"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c1"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
        />
      </svg>
    </a>
  </div>
</div>
`;
